# mdsv2

./: CMakeLists.txt  PlotWidgets.cpp  Readme.md  WaveletAnalyzer.cpp  WaveletAnalyzer.h  build.sh  launch.sh  main.cpp
exsamples/: szum1_1_500.csv  szum2_1_100.csv
